--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,6 +1,4 @@
-@import "_part";
+@import "variables.less";
+@import "fonts.less";
+@import "components/page-header.less";
 
-body {
-	background-color: pink;
-	display: flex;
-}
