--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,1 +1,16 @@
+@pink-color: #d22856;
 @nav-color: #283645;
+@darkblue-color: #1d2631;
+@open-sans: "OpenSans", Arial, sans-serif; 
+@retina2x: ~"(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
+@retina3x: ~"(min-resolution: 288dpi), (min-resolution: 3dppx)";
+
+
+
+@mobile-width: ~"(min-width: 320px) and (max-width: 699px)";
+@tablet-width: ~"(min-width: 700px)";
+@mobile-tablet-width-only: ~"(min-width: 320px) and (max-width: 1199px)";
+@desktop-width: ~"(min-width: 1200px)";
+@large-desktop-width: ~"(min-width: 1660px)";
+
+
