--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,4 +1,23 @@
 @import "variables.less";
 @import "fonts.less";
 @import "components/page-header.less";
+@import "components/main-nav.less";
+@import "components/download-app.less";
+@import "components/page-main.less";
+@import "components/preview.less";
+@import "components/comments.less";
+@import "components/price.less";
+@import "components/contacts.less";
+@import "components/map.less";
+@import "components/profit.less";
+@import "components/price-table.less";
+@import "components/main-footer.less";
+
+
+
+body {
+   // background: @nav-color url("../img/Mobile-menu.png") no-repeat 50% 0px;
+	 
+}
+
 
