--- a/app/less/components/profit.less
+++ b/app/less/components/profit.less
@@ -73,8 +73,8 @@
 @media @desktop-width {
   .profit {
     background-color: #f2f2f2;
-    min-height: 417px;
-    padding-top: 40px;
+    min-height: 410px;
+    padding-top: 33px;
   
     &__clock {
     position: relative;
@@ -86,7 +86,7 @@
       font-size: 120px;
       line-height: 187px;
       left: 80px;
-      top: 100px;
+      top: 96px;
       }
     }
     
@@ -98,11 +98,14 @@
       width: 570px;
       padding-top: 50px;
 
-        & p,
-        & a {
-        font-size: 18px;
-        line-height: 30px;
-        
+      & p,
+      & a {
+      font-size: 18px;
+      line-height: 30px;
+      }
+
+      & p {
+        margin-bottom: 32px; 
       }
     }
   
