--- a/app/less/components/contacts.less
+++ b/app/less/components/contacts.less
@@ -1,6 +1,6 @@
 .contacts {
   padding-top: 32px;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   
   & h2 {
     width: 280px;
@@ -48,7 +48,7 @@
       font-size: 40px;
       line-height: 50px;
       width: 380px;
-      margin-bottom: 45px;
+      margin-bottom: 40px;
     }
   
     &__wrapper {
@@ -69,6 +69,7 @@
 @media @desktop-width {
   .contacts {
     min-height: 300px;
+    padding-top: 65px;
     
     &__wrapper {
       justify-content: space-between;
@@ -76,7 +77,10 @@
       min-height: 125px;
       
       & p {
+        display: flex;
         width: 250px;
+        flex-direction: column;
+        justify-content: space-between;
         margin-left: 0px;
         margin-right: 0px;
       }
@@ -88,12 +92,17 @@
       & p:nth-of-type(2) {
         order: 3;
       }
+    
+      & a {
+        margin-bottom: 18px;
+      }
     }
 
     & h2 {
       font-size: 50px;
       line-height: 60px;
       width: 520px;
+      margin-bottom: 52px;
     }
   }
 }
