--- a/app/less/components/download-app.less
+++ b/app/less/components/download-app.less
@@ -98,6 +98,7 @@
     
     &__btn {
       padding: 15px 45px;
+      margin-bottom: 45px;
     }
 
     &__slogan {
@@ -106,6 +107,11 @@
       text-align: center;
       margin-left: auto;
       margin-right: auto;
+      margin-bottom: 38px;
+    }
+    
+    &__icons {
+      margin-bottom: 15px;
     }
 
     &__icons a {
@@ -125,12 +131,24 @@
 
 @media @desktop-width {
   .download-app {
-    
-    margin-left: 25px;
+    margin-top: 30px;
+    margin-left: 0px;
+
+    &__btn {
+      font-size: 21px;
+      line-height: 18px;
+      padding: 16px 28px;
+      margin-bottom: 68px;
+    }
 
     &__slogan {
       width: 236px;
       font-size: 50px;
+      line-height: 60px;
+    }
+  
+    &__icons {
+      margin-bottom: 32px;
     }
   }
 }
