--- a/app/less/components/price-table.less
+++ b/app/less/components/price-table.less
@@ -114,7 +114,8 @@
 
     & th {
       font-size: 18px;
-      padding: 20px 0px;
+      padding: 16px 0px;
+      width: 155px;
 
       & span {
         font-size: 24px;
