Поправлен Pixel Perfect для стартовой страницы на ширине 1200px, кнопки навигации для слайдера отзывов отображаются

--- a/app/less/components/comments.less
+++ b/app/less/components/comments.less
@@ -74,7 +74,7 @@
 
 @media @tablet-width {
   .comments {
-    min-height: 270px;
+    min-height: 280px;
 
     & .owl-nav {
       display: none;
@@ -132,6 +132,10 @@
       display: none;
     }
     
+    .owl-nav {
+      display: block;
+    }
+
     .owl-next {
       position: absolute;
       font-size: 0px;
