--- a/app/less/components/contacts.less
+++ b/app/less/components/contacts.less
@@ -1,6 +1,6 @@
 .contacts {
   padding-top: 32px;
-  margin-bottom: 12px;
+  margin-bottom: 12git logpx;
   
   & h2 {
     width: 280px;
@@ -69,7 +69,7 @@
 @media @desktop-width {
   .contacts {
     min-height: 300px;
-    padding-top: 65px;
+    padding-top: 57px;
     
     &__wrapper {
       justify-content: space-between;
@@ -83,18 +83,17 @@
         justify-content: space-between;
         margin-left: 0px;
         margin-right: 0px;
+        padding-top: 10px;
+        padding-bottom: 10px;
       }
 
       & p:nth-of-type(3) {
       order: 2;
+      padding-bottom: 0px;
       }
 
       & p:nth-of-type(2) {
         order: 3;
-      }
-    
-      & a {
-        margin-bottom: 18px;
       }
     }
 
@@ -102,7 +101,7 @@
       font-size: 50px;
       line-height: 60px;
       width: 520px;
-      margin-bottom: 52px;
+      margin-bottom: 47px;
     }
   }
 }
