--- a/app/less/components/page-header.less
+++ b/app/less/components/page-header.less
@@ -84,6 +84,7 @@
 		}
 
     &__bg {
+      position: relative;
       display: flex;
       width: 1200px;
       height: 0px;
@@ -93,7 +94,7 @@
         position: absolute;
         content: "";
         left: 455px;
-        top: 208px;
+        top: 100px;
         width: 575px;
         height: 645px;
         background-image: url("../../img/iphone-hand-desktop@1x.png");
