Мобильная и Планшетная версии страницы Галереи (not pixel perfect, no IE support)

--- a/app/less/components/page-main.less
+++ b/app/less/components/page-main.less
@@ -1,6 +1,8 @@
 .page-main {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 2550px;
   height: auto;
+  margin: 0 auto;
+  background-color: #fff;
 }
