--- a/app/less/main.less
+++ b/app/less/main.less
@@ -12,6 +12,12 @@
 @import "components/profit.less";
 @import "components/price-table.less";
 @import "components/main-footer.less";
+@import "components/page-photo.less";
+@import "components/photo-preview.less";
+@import "components/main-post.less";
+@import "components/post.less";
+@import "components/posts.less";
+@import "components/app-editor.less";
 
 
 
