--- a/app/less/components/main-footer.less
+++ b/app/less/components/main-footer.less
@@ -1,5 +1,6 @@
 .main-footer {
   min-height: 127px;
+  max-width: 2550px;
   
   &__wrapper {
     display: flex;
@@ -71,7 +72,7 @@
       background-image: url("../../img/playmarketIcon.svg");
       background-repeat: no-repeat;
       background-size: 15px 13px;
-      background-position: 50% 50%;
+      background-position: 52% 50%;
     }
   }
 
@@ -120,6 +121,38 @@
 @media @mobile-width {
   .main-footer {
     display: none;
+
+    &__wrapper {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__logo-footer {
+      margin-bottom: 35px;
+      padding-top: 40px;
+      height: auto;
+    }
+    
+    &__link {
+      text-indent: -9999px;
+    }
+
+    &__links {
+      margin-bottom: 40px;
+    }
+
+    &__developed-by {
+      width: 130px;  
+
+      & p {
+        margin: 0;
+      }
+    }
+    
+  }
+
+  .main-footer--mobile {
+    display: flex;
   }
 }
 
@@ -156,7 +189,7 @@
         background-image: url("../../img/decorateblock2.svg");
         background-repeat: no-repeat;
         z-index: 2;
-        top: -381px;
+        top: -510px;
       }
     }
   }
