--- a/app/less/components/preview.less
+++ b/app/less/components/preview.less
@@ -45,8 +45,14 @@
     text-align: center;
     background-image: url("../../img/decorateblock.svg");
     background-repeat: no-repeat;
-    
+    background-size: 101% auto;
+    background-position: 50% 0;
 
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+     background-position: 50% -1px;
+     background-size: 101% auto;
+     background-image: url("../../img/decorateblock-for-IE.svg");
+    }
   }
 
   &__advantage h2 {
@@ -205,7 +211,7 @@
       background-image: url("../../img/iphone-screen-tablet-1@1x.png");
       margin: 0;
 
-      @media @retina2x {
+      @media @retina2x and @tablet-width {
       background-image: url("../../img/iphone-screen-tablet-1@2x.png");
       }
     }
@@ -217,7 +223,7 @@
       background-image: url("../../img/iphone-screen-tablet-2@1x.png");
       margin: 0;
 
-      @media @retina2x {
+      @media @retina2x and @tablet-width {
       background-image: url("../../img/iphone-screen-tablet-2@2x.png");
       }
     }
@@ -229,7 +235,7 @@
       background-image: url("../../img/iphone-screen-tablet-3@1x.png");
       margin: 0;
 
-      @media @retina2x {
+      @media @retina2x and @tablet-width {
       background-image: url("../../img/iphone-screen-tablet-3@2x.png");
       }
     }
