--- a/app/less/components/price.less
+++ b/app/less/components/price.less
@@ -6,6 +6,14 @@
   background-repeat: no-repeat;
   padding-top: 85px;
   box-sizing: border-box;
+  background-position: 50% 0;  
+  background-size: 101% auto;
+
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+     background-position: 0 -1px;
+     background-size: 101% auto;
+     background-image: url("../../img/decorateblock-for-IE.svg");
+  }
 
   &__slider {
     max-width: 400px;
