--- a/app/less/components/app-editor.less
+++ b/app/less/components/app-editor.less
@@ -24,7 +24,7 @@
     width: 280px;
     height: 374px;
     margin: 0 auto;
-    margin-bottom: 40px;
+    margin-bottom: 45px;
 
     & img {
       width: 100%;
@@ -43,7 +43,7 @@
       height: 1px;
       background-color: #dfdfdf; 
       left: 0px;
-      bottom: 201px;
+      bottom: 210px;
       opacity: 0.5;
     }
   }
@@ -67,8 +67,8 @@
     cursor: pointer;
 
     &-crop {
-      width: 46px;
-      height: 46px;
+      width: 44px;
+      height: 44px;
     }
 
     &-crop .fill {
@@ -76,8 +76,8 @@
     }
   
     &-fill {
-      width: 53px;
-      height: 47px;
+      width: 48px;
+      height: 43px;
     }
 
     &-fill .fill {
@@ -102,30 +102,30 @@
     margin: 0 auto;
     margin-bottom: 5px;
 
-
-    & .pointer-label.high {
-      display: none;
-    }
-  
-    & .clickable-dummy {
+    & .range-bar{
+      margin-top: 10px;
+      width: 240px;
       background-color: #000;
       height: 2px;
     }
-  
-    & .pointer.high {
-      border: 2px solid @pink-color;
-      background-color: #f2f2f2;
-      border-radius: 50%;
+
+    & .range-quantity {
+      background-color: transparent;
+    }
+
+    & .range-handle {
       width: 10px;
       height: 10px;
-      cursor: pointer;
       top: -6px;
+      border: 2px solid @pink-color; 
+      background-color: #f2f2f2;
+      cursor: pointer;
 
       &:active {
         background-color: @pink-color;
       }
     }
-  
+
     &-crop,
     &-fill,
     &-contrast {
@@ -156,9 +156,8 @@
   &__btns {
     display: flex;
     flex-direction: column;
-    height: 162px;
-    padding: 40px 0;
-    padding-bottom: 0px;
+    height: 165px;
+    padding-top: 40px;
   }
 
   &__push {
@@ -219,11 +218,16 @@
 @media @tablet-width {
   .app-editor {
     width: 700px;
+    margin: 0 auto;
+    
+    .app-editor__nav label:hover .fill {
+      fill: @pink-color;
+    }
 
     &__wrapper {
       display: flex;
       box-sizing: border-box;
-      height: 510px;
+      height: 515px;
       padding-top: 57px;
       padding-left: 40px;
       padding-right: 40px;
@@ -239,14 +243,28 @@
     }
 
     &__nav {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
       margin-right: 0;
       height: 400px;
     }
     
     &__btn {
+      position: relative;
       width: 24px;
       height: 24px;
       margin-left: 5px;
+      
+      &::before {
+        content: "";
+        top: 46px;
+        width: 276px;
+        height: 1px;
+        position: absolute;
+        background-color: #b5b9be; 
+        opacity: 0.3; 
+      }
 
       & .fill {
         fill: @pink-color
@@ -271,18 +289,23 @@
     }
 
     &__btns {
-      height: 135px;
+      width: 260px;
+      height: 130px;
       padding-top: 0;
-      margin-top: 86px;
+      justify-content: space-between;
+    }
+
+    &__push {
+      margin-bottom: 0;
     }
 
     &__settings {
       flex-direction: column;
+      top: 70px;
       position: absolute;
       width: 36px;
-      height: 155px;
-      padding-top: 15px;
-
+      height: 165px;
+      margin-bottom: 0;
     }
     
     &__header {
@@ -294,43 +317,44 @@
         width: 440px;
       }
     }
-
+    
     &__range {
       display: none;
+      
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: absolute;
+        top: 80px;
+        right: 22px;
+        height: 172px;
+      }
 
       &-crop,
       &-fill,
       &-contrast {
         display: block;
-        border-bottom: 1px solid #dfdfdf;
-        width: 275px;
-        height: 65px;
-        box-sizing: border-box;
-        margin: 0 auto;
-        box-sizing: border-box;
-        padding-left: 55px;
-        padding-top: 30px;
-        
+        width: 240px;
+        height: 30px;
 
-
-
-        & .pointer-label.high {
-          display: none;
-        }
-      
-        & .clickable-dummy {
+        & .range-bar  {
+          width: 202px;
           background-color: #000;
           height: 2px;
         }
-      
-        & .pointer.high {
-          border: 2px solid @pink-color;
-          background-color: #f2f2f2;
-          border-radius: 50%;
+
+        & .range-quantity {
+          background-color: transparent;
+        }
+
+        & .range-handle {
           width: 10px;
           height: 10px;
-          cursor: pointer;
           top: -6px;
+          border: 2px solid @pink-color; 
+          background-color: #f2f2f2;
+          cursor: pointer;
 
           &:active {
             background-color: @pink-color;
@@ -341,5 +365,103 @@
   }  
 }
 
+@media @desktop-width {
+  .app-editor {
+    width: 940px;
+    
+    &__wrapper {
+      padding-left: 80px;
+      padding-right: 70px;
+    }
 
+    &__header {
+      & h2 {
+        padding-top: 0px;
+      }
+    }
+
+    &__nav {
+      width: 410px;
+    }
+    
+    &__range {
+      
+      &-wrapper {
+        top: 75px;
+        right: 90px;
+      }
+
+      &-crop,
+      &-fill,
+      &-contrast {
+        border-bottom: none;
+        width: 288px;
+
+        & .range-bar  {
+          width: 288px;
+        }
+      }
+    }
+    
+    &__btns {
+      width: 410px;
+      box-sizing: border-box;
+      flex-direction: row;
+      margin-left: 10px; 
+      padding-top: 75px;
+    }
+
+    &__push,
+    &__cancel {
+      width: 183px;
+    } 
+
+    &__settings {
+      top: 55px;
+      height: 185px;
+      margin-bottom: 0;
+      padding-top: 0;
+    }
+
+    &__btn {
+      width: 48px;
+      height: 48px;
+      cursor: pointer;
+
+      &::before {
+        width: 410px;
+        top: 60px;
+      }
+      
+      &-crop {
+      width: 44px;
+      height: 44px;
+      }
+
+      &-crop .fill {
+        fill: @pink-color;
+      }
+  
+      &-fill {
+        width: 48px;
+        height: 43px;
+      }
+
+      &-fill .fill {
+        fill: @pink-color;
+      }
+  
+      &-contrast {
+        width: 32px;
+        height: 32px;
+        margin-left: 8px;
+        margin-top: 6px;
+      }
+
+      &-contrast .fill {
+        fill: @pink-color;
+      }
+    }
+  }
+}
 
