--- a/app/less/components/page-header.less
+++ b/app/less/components/page-header.less
@@ -103,7 +103,12 @@
 		background-image: url("../../img/background-fullsize.jpg");
 		background-size: 2560px 1707px;
 		background-position: 50% 79.5%;
-	
+    
+    &--photo {
+      min-height: 394px;
+      background-position: 50% -678px;
+    }
+
 		&__wrapper {
 			width: 940px;
 			margin-left: auto;
