--- a/app/less/components/photo-preview.less
+++ b/app/less/components/photo-preview.less
@@ -3,9 +3,9 @@
   flex-direction: column;
   position: relative;
   box-sizing: border-box;
-  margin-top: -145px;
+  margin-top: -140px;
   padding-bottom: 50px;
-  min-height: 329px;
+  min-height: 325px;
 
 
   & h1 {
@@ -15,7 +15,7 @@
     font-weight: 300;
     color: #fff;
     margin: 0 auto;
-    margin-bottom: 133px;
+    margin-bottom: 130px;
     width: 220px;   
     text-align: center;  
   }
@@ -34,20 +34,36 @@
 
 @media @tablet-width {
   .photo-preview {
-    margin-top: -255px;
+    margin-top: -262px;
     padding-bottom: 75px;
 
     & h1 {
       font-size: 50px;
       line-height: 60px;
       width: 360px;
-      margin-bottom: 200px;
+      margin-bottom: 210px;
     }
 
     & p {
       font-size: 18px;
       width: 450px;
       margin-top: 27px;
+    }
+  }
+}
+
+@media @desktop-width {
+  .photo-preview {
+      margin-top: -220px;
+      padding-bottom: 85px;
+    
+    & h1 {
+      margin-bottom: 188px;
+    }
+
+    & p {
+      width: 580px;
+      margin-top: 6px;
     }
   }
 }
