--- a/app/less/components/post.less
+++ b/app/less/components/post.less
@@ -69,7 +69,7 @@
     border: none;
     background-image: url("../../img/like.svg");
     background-size: 13px 12px;
-    margin-right: 20px;
+    margin-right: 15px;
     background-repeat: no-repeat;
 
   }
@@ -110,7 +110,9 @@
       width: 300px;
       min-height: 155px;
       padding-top: 22px;
+      padding-left: 25px;
       padding-bottom: 24px;
+      padding-right: 15px;
     }
 
     &__btn {
@@ -128,7 +130,9 @@
     &__wrapper--responsive {
       position: relative;
       width: 620px;
-      padding: 28px;
+      padding: 22px;
+      padding-top: 28px;
+      padding-left: 26px;
       padding-bottom: 10px;
     }
 
@@ -140,7 +144,7 @@
       & .post__btn {
         order: 2; 
         margin-right: 0px;
-        margin-left: 20px;
+        margin-left: 15px;
       }
     }
   
@@ -150,6 +154,30 @@
       width: 300px;
       & img {
         margin-top: -50px;
+      }
+    }
+  }
+}
+
+@media @desktop-width {
+  .post {
+    margin-bottom: 55px;
+
+    &__wrapper--responsive {
+      width: 100%;
+      min-height: 95px;
+    }
+
+    &--responsive {
+      width: 940px;
+      margin-bottom: 10px;
+    }
+
+    &__img {
+      height: 400px;
+
+      & img {
+        margin-top: 0;
       }
     }
   }
