Адаптивная страница форм (no PixelPerfect)

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -18,12 +18,8 @@
 @import "components/post.less";
 @import "components/posts.less";
 @import "components/app-editor.less";
+@import "components/competition.less";
 
 
-
-body {
-   // background: @nav-color url("../img/Mobile-menu.png") no-repeat 50% 0px;
-	 
-}
 
 
