--- a/app/less/components/main-footer.less
+++ b/app/less/components/main-footer.less
@@ -7,6 +7,7 @@
     justify-content: space-between;
     max-width: 940px;
     margin: 0 auto;
+    padding: 0 40px;
 
   }
 
@@ -225,7 +226,8 @@
         background-repeat: no-repeat;
         z-index: 2;
         top: -510px;
-        left: -360px;
+        left: 50%;
+        margin-left: -830px;
       }
     }
 
@@ -236,4 +238,6 @@
     }
   }
 }
+
+
 
