--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -6,7 +6,7 @@
 @retina3x: ~"(min-resolution: 288dpi), (min-resolution: 3dppx)";
 
 
-
+//adaptive
 @mobile-width: ~"(min-width: 320px) and (max-width: 699px)";
 @tablet-width: ~"(min-width: 700px)";
 @mobile-tablet-width-only: ~"(min-width: 320px) and (max-width: 1199px)";
@@ -14,3 +14,11 @@
 @large-desktop-width: ~"(min-width: 1660px)";
 
 
+//mixins
+.font(@family: @open-sans; @size:14px; @height:30px ; @weight:400; @color: @nav-color){
+  font-family: @family;
+  font-size: @size;
+  line-height: @height;
+  font-weight: @weight;
+  color: @color;
+}
