Страница формы PixelPerfect адаптив, добавлены попапы No JS

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -19,6 +19,8 @@
 @import "components/posts.less";
 @import "components/app-editor.less";
 @import "components/competition.less";
+@import "components/popup-form-sent.less";
+@import "components/popup-form-error.less";
 
 
 
