--- a/app/less/components/competition.less
+++ b/app/less/components/competition.less
@@ -1,5 +1,5 @@
 .competition {
-  
+  margin-bottom: 15px;
   
   &__wrapper {
     position: relative;
@@ -162,11 +162,11 @@
     & input[type="tel"],
     & input[type="email"] {
       box-sizing: border-box;
-      height: 60px;
+      height: 65px;
       padding: 20px;
       border: 2px solid #e5e5e5;
       border-radius: 3px;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       outline: none;
 
       &:hover {
@@ -320,7 +320,7 @@
     width: 280px;
     margin: 0 auto;
     margin-bottom: 35px;
-    padding: 16px 40px;
+    padding: 16px 44px;
     border-radius: 3px;
     outline: none;
 
@@ -338,6 +338,10 @@
     text-transform: uppercase;
     width: 200px;
     margin: 0 auto;
+    
+    &-desktop {
+      display: none;
+    }
 
     & span {
       color: @pink-color;
@@ -396,6 +400,9 @@
       flex-direction: row;
       flex-wrap: wrap;
       width: 620px;
+      height: 345px;
+      margin-bottom: 10px;
+
 
       & input[type="text"] {
         flex-grow: 1;
@@ -418,6 +425,7 @@
       margin: 0 auto;
       margin-bottom: 68px;
       padding: 55px 60px;
+      padding-left: 30px;
       background-color: #fff;
       border: 2px solid #e5e5e5;
 
@@ -432,6 +440,10 @@
         left: 50%;
         margin-left: -183px;
         padding: 0 10px;
+      }
+
+      & label {
+        left: 10px;
       }
     }
     
@@ -479,23 +491,24 @@
         position: relative;
         width: 620px;
         min-height: 305px;
-        padding-top: 45px;
+        padding-top: 50px;
 
         & input {
           width: 500px;
           margin: 0 auto;
-
         }
 
         & input#userTel {
           order: 1;
           margin-bottom: 20px;
           padding-right: 60px;
+          height: 60px;
         }
 
         & input#userEmail {
           order: 3;
           padding-right: 60px;
+          height: 60px;
         }
       
         & label {
@@ -528,7 +541,7 @@
       width: 56px;
       height: 56px;
       background-color: #e5e5e5;
-      top: 47px;
+      top: 52px;
       right: 62px;
       background-image: url("../../img/phone-icon.svg");
       background-repeat: no-repeat;
@@ -545,7 +558,7 @@
       width: 56px;
       height: 56px;
       right: 62px;
-      top: 175px;
+      top: 180px;
       background-color: #e5e5e5;
       background-image: url("../../img/mail-icon.svg");
       background-repeat: no-repeat;
@@ -556,6 +569,8 @@
     &__btn {
       order: 7;
       margin-left: 0px;
+      width: 300px;
+      padding-left: 55px;
     }
 
     &__footnote {
@@ -570,7 +585,7 @@
       position: relative;
       box-sizing: border-box;
       border: 2px solid #e5e5e5;
-      min-height: 290px;
+      min-height: 295px;
       padding-top: 47px;
       margin-bottom: 70px;
         
@@ -591,6 +606,7 @@
 
         & textarea {
           width: 500px;
+          height: 195px;
           margin: 0 auto;
         }
       }
@@ -613,17 +629,25 @@
 
     &__form {
       width: 940px;
+      margin-bottom: 0px;
       flex-direction: row;
       flex-wrap: wrap;
 
       &-header {
         width: 760px;
+        margin-bottom: 85px;
+
+        & span {
+          display: inline-block;
+          width: 340px;
+        }
       }
     }
   
     &__user-data {
       width: 435px;
       margin-left: 0px;
+
 
       & input#userSurname,
       & input#userName,
@@ -635,7 +659,11 @@
     &__apps {
       margin: 0;
       width: 435px;
-      height: 305px;
+      height: 290px;
+
+      label:before {
+        left: 30px;
+      } 
     }
 
     &__phone-email {
@@ -647,7 +675,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
         min-height: 160px;
-        padding: 43px 58px;
+        padding: 45px 58px;
 
         & input#userTel,
         & input#userEmail {
@@ -660,23 +688,27 @@
     &__phone {
       height: 20px;
       position: absolute;
-      top: 120px;
+      top: 122px;
       left: 0px;
+    }
+    
+    &__btn {
+      margin-bottom: 0px;
     }
 
     &__phone-icon {
-      top: 45px;
+      top: 47px;
       left: 374px;
     }
     
     &__email {
       position: absolute;
-      top: 120px;
+      top: 122px;
       right: 290px;
     }
 
     &__email-icon {
-      top: 45px;
+      top: 47px;
       right: 60px;
     }
   
@@ -688,7 +720,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       padding-left: 120px;
-      padding-right: 40px;
+      padding-right: 0;
       
       & label {
         width: 210px;
@@ -706,12 +738,14 @@
     &__emotion {
       width: 936px;
       min-height: 213px;
-      padding-top: 45px;
+      padding-top: 40px;
       padding-bottom: 45px;
+      margin-bottom: 65px;
 
       & textarea {
         width: 816px;
         height: 127px;
+        padding-top: 15px;
       }
     }
 
