Исправлена ошибка с относительными путями

--- a/app/less/components/comments.less
+++ b/app/less/components/comments.less
@@ -141,7 +141,7 @@
       height: 41px;
       top: 60px;
       left: -120px;
-      background-image: url("../../img/navIcon.svg");
+      background-image: url("../img/navIcon.svg");
       background-size: 22px 41px;
 
       &:hover {
@@ -162,7 +162,7 @@
       top: 60px;
       right: -120px;
       transform: rotate(180deg);
-      background-image: url("../../img/navIcon.svg");
+      background-image: url("../img/navIcon.svg");
       background-size: 22px 41px;
 
       &:hover {
@@ -197,7 +197,7 @@
       height: 63px;
       top: -100px;
       left: 305px;
-      background-image: url("../../img/quotes.svg");
+      background-image: url("../img/quotes.svg");
       background-repeat: no-repeat;
       background-size: 79px 63px;
       background-position: 50% 20%;
