--- a/app/less/components/main-footer.less
+++ b/app/less/components/main-footer.less
@@ -74,21 +74,21 @@
     }
 
     &--twitter {
-      background-image: url("../../img/twitterIcon.svg");
+      background-image: url("../img/twitterIcon.svg");
       background-repeat: no-repeat;
       background-size: 18px 14px;
       background-position: 50% 50%;
     }
 
     &--facebook {
-      background-image: url("../../img/facebookIcon.svg");
+      background-image: url("../img/facebookIcon.svg");
       background-repeat: no-repeat;
       background-size: 9px 18px;
       background-position: 50% 50%;
     }
 
     &--playmarket {
-      background-image: url("../../img/playmarketIcon.svg");
+      background-image: url("../img/playmarketIcon.svg");
       background-repeat: no-repeat;
       background-size: 15px 13px;
       background-position: 52% 50%;
@@ -222,7 +222,7 @@
         position: absolute;
         width: 1660px;
         height: 180px;
-        background-image: url("../../img/decorateblock2.svg");
+        background-image: url("../img/decorateblock2.svg");
         background-repeat: no-repeat;
         z-index: 2;
         top: -510px;
