--- a/app/less/components/map.less
+++ b/app/less/components/map.less
@@ -6,7 +6,7 @@
     height: 73px;
     top: -1px;
     width: 100%;
-    background-image: url("../../img/decorateblock2.svg");
+    background-image: url("../img/decorateblock2.svg");
     background-repeat: no-repeat;
     z-index: 2;
 
