--- a/app/less/components/preview.less
+++ b/app/less/components/preview.less
@@ -224,7 +224,7 @@
       margin: 0;
 
       @media @retina2x and @tablet-width {
-      background-image: url("../../img/iphone-screen-tablet-2@2x.png");
+      background-image: url("../img/iphone-screen-tablet-2@2x.png");
       }
     }
 
@@ -232,11 +232,11 @@
       width: 268px;
       height: 481px;
       background-size: 268px 481px;
-      background-image: url("../../img/iphone-screen-tablet-3@1x.png");
+      background-image: url("../img/iphone-screen-tablet-3@1x.png");
       margin: 0;
 
       @media @retina2x and @tablet-width {
-      background-image: url("../../img/iphone-screen-tablet-3@2x.png");
+      background-image: url("../img/iphone-screen-tablet-3@2x.png");
       }
     }
   }
@@ -296,32 +296,32 @@
     }
     
     &__img--iphone1 {
-      background-image: url("../../img/iphone-screen-desktop-1@1x.png");
+      background-image: url("../img/iphone-screen-desktop-1@1x.png");
       background-repeat: no-repeat;
       background-size: 100% auto;
 
       @media @retina2x {
-        background-image: url("../../img/iphone-screen-desktop-1@2x.png");
+        background-image: url("../img/iphone-screen-desktop-1@2x.png");
       }
     }
 
     &__img--iphone2 {
-      background-image: url("../../img/iphone-screen-desktop-2@1x.png");
+      background-image: url("../img/iphone-screen-desktop-2@1x.png");
       background-repeat: no-repeat;
       background-size: 100% auto;
     
       @media @retina2x {
-        background-image: url("../../img/iphone-screen-desktop-2@2x.png");
+        background-image: url("../img/iphone-screen-desktop-2@2x.png");
       }
     }
 
     &__img--iphone3 {
-      background-image: url("../../img/iphone-screen-desktop-3@1x.png");
+      background-image: url("../img/iphone-screen-desktop-3@1x.png");
       background-repeat: no-repeat;
       background-size: 100% auto;
     
       @media @retina2x {
-        background-image: url("../../img/iphone-screen-desktop-3@2x.png");
+        background-image: url("../img/iphone-screen-desktop-3@2x.png");
       }
     }
 
