--- a/app/less/components/competition.less
+++ b/app/less/components/competition.less
@@ -128,7 +128,7 @@
     }
 
     input:checked + label::before {
-        background-image: url("../../img/tick.svg");
+        background-image: url("../img/tick.svg");
         background-repeat: no-repeat;
         background-size: 22px 16px;
         background-position: 7px 9px;
@@ -252,7 +252,7 @@
       background-size: 15px 15px;
       background-repeat: no-repeat;
       background-position: 50% 50%;
-      background-image: url("../../img/check.svg");     
+      background-image: url("../img/check.svg");     
     }
   }
   
@@ -545,7 +545,7 @@
       background-color: #e5e5e5;
       top: 52px;
       right: 62px;
-      background-image: url("../../img/phone-icon.svg");
+      background-image: url("../img/phone-icon.svg");
       background-repeat: no-repeat;
       background-size: 20px 20px;
       background-position: 50% 50%;
@@ -562,7 +562,7 @@
       right: 62px;
       top: 180px;
       background-color: #e5e5e5;
-      background-image: url("../../img/mail-icon.svg");
+      background-image: url("../img/mail-icon.svg");
       background-repeat: no-repeat;
       background-size: 18px 13px;
       background-position: 50% 50%;
