--- a/app/less/components/page-header.less
+++ b/app/less/components/page-header.less
@@ -13,17 +13,17 @@
     margin-top: -70px;
     margin-left: auto;
     margin-right: auto;
-    background-image: url("../../img/iphone-hand-mobile.png"), url("../../img/background-mobile@1x.jpg");
+    background-image: url("../img/iphone-hand-mobile.png"), url("../../img/background-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: 18% 100% ,52% 0;
     background-size: 258px 286px, 700px 488px;
       
       @media @retina2x {
-        background-image: url("../../img/iphone-hand-mobile@2x.png"), url("../../img/background-mobile@2x.jpg");
+        background-image: url("../img/iphone-hand-mobile@2x.png"), url("../../img/background-mobile@2x.jpg");
       }
     
       @media @retina3x {
-        background-image: url("../../img/iphone-hand-mobile@3x.png"), url("../../img/background-mobile@3x.jpg");
+        background-image: url("../img/iphone-hand-mobile@3x.png"), url("../../img/background-mobile@3x.jpg");
       }
 
       @media all and (orientation: landscape), all and (min-width: 480px) {
@@ -32,16 +32,16 @@
 	
     &--photo {
       height: 237px;
-      background-image: url("../../img/background-mobile@1x.jpg");
+      background-image: url("../img/background-mobile@1x.jpg");
       background-size: 700px 488px;
       background-position: 52% 0;
 
       @media @retina2x {
-      background-image: url("../../img/background-mobile@2x.jpg");
+      background-image: url("../img/background-mobile@2x.jpg");
       }
 
       @media @retina3x {
-      background-image: url("../../img/background-mobile@3x.jpg");
+      background-image: url("../img/background-mobile@3x.jpg");
       }
     }
   }
@@ -53,13 +53,13 @@
 @media @tablet-width {
 	.page-header {
 		background-repeat: no-repeat;
-		background-image: url("../../img/iphone-hand-tablet@1x.png"), url("../../img/background-tablet@1x.jpg");
+		background-image: url("../img/iphone-hand-tablet@1x.png"), url("../../img/background-tablet@1x.jpg");
 		background-size: 700px 545px, 1200px 729px;
 		background-position: 40% 184px ,50% 0%;
 		min-height: 729px;
 		
 		@media @retina2x {
-			background-image: url("../../img/iphone-hand-tablet@2x.png"), url("../../img/background-tablet@2x.jpg");
+			background-image: url("../img/iphone-hand-tablet@2x.png"), url("../../img/background-tablet@2x.jpg");
 		}
 
 		&__bg {
@@ -74,12 +74,12 @@
     }
 	
     &--photo {
-      background-image: url("../../img/background-tablet@1x.jpg");
+      background-image: url("../img/background-tablet@1x.jpg");
       background-size: 1200px 729px;
       background-position: 50% 0%;
 
       @media @retina2x {
-      background-image: url("../../img/background-tablet@2x.jpg");
+      background-image: url("../img/background-tablet@2x.jpg");
       }
     }
   
@@ -100,7 +100,7 @@
 @media @desktop-width {
 	.page-header {
 		min-height: 853px;
-		background-image: url("../../img/background-fullsize.jpg");
+		background-image: url("../img/background-fullsize.jpg");
 		background-size: 2560px 1707px;
 		background-position: 50% 79.5%;
     
@@ -133,13 +133,13 @@
         top: 100px;
         width: 575px;
         height: 645px;
-        background-image: url("../../img/iphone-hand-desktop@1x.png");
+        background-image: url("../img/iphone-hand-desktop@1x.png");
         background-position: -310px 0px;
         background-repeat: no-repeat;
         background-size: 1050px 645px;
       
         @media @retina2x {
-          background-image: url("../../img/iphone-hand-desktop@2x.png");
+          background-image: url("../img/iphone-hand-desktop@2x.png");
         }
       }
     }
