--- a/app/less/components/post.less
+++ b/app/less/components/post.less
@@ -67,7 +67,7 @@
     height: 12px;
     background-color: transparent;
     border: none;
-    background-image: url("../../img/like.svg");
+    background-image: url("../img/like.svg");
     background-size: 13px 12px;
     margin-right: 15px;
     background-repeat: no-repeat;
