--- a/app/less/components/price.less
+++ b/app/less/components/price.less
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 470px;
   background-color: #f2f2f2; 
-  background-image: url("../../img/decorateblock.svg");
+  background-image: url("../img/decorateblock.svg");
   background-repeat: no-repeat;
   padding-top: 85px;
   box-sizing: border-box;
@@ -12,7 +12,7 @@
   @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
      background-position: 0 -1px;
      background-size: 101% auto;
-     background-image: url("../../img/decorateblock-for-IE.svg");
+     background-image: url("../img/decorateblock-for-IE.svg");
   }
 
   &__slider {
