--- a/app/less/components/preview.less
+++ b/app/less/components/preview.less
@@ -43,7 +43,7 @@
     font-family: @open-sans;
     background-color: #f2f2f2;
     text-align: center;
-    background-image: url("../../img/decorateblock.svg");
+    background-image: url("../img/decorateblock.svg");
     background-repeat: no-repeat;
     background-size: 101% auto;
     background-position: 50% 0;
@@ -51,7 +51,7 @@
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
      background-position: 50% -1px;
      background-size: 101% auto;
-     background-image: url("../../img/decorateblock-for-IE.svg");
+     background-image: url("../img/decorateblock-for-IE.svg");
     }
   }
 
@@ -86,15 +86,15 @@
     bottom: 0px;
     width: 157px;
     height: 278px;
-    background-image: url("../../img/iphone-case-mobile@1x.png");
+    background-image: url("../img/iphone-case-mobile@1x.png");
     background-size: 157px 278px;
 
     @media @retina2x {
-      background-image: url("../../img/iphone-case-mobile@2x.png");
+      background-image: url("../img/iphone-case-mobile@2x.png");
     }
   
     @media @retina3x {
-      background-image: url("../../img/iphone-case-mobile@3x.png");
+      background-image: url("../img/iphone-case-mobile@3x.png");
     }
   }
 
@@ -105,15 +105,15 @@
     width: 142px;
     height: 251px;
     background-repeat: no-repeat;
-    background-image: url("../../img/iphone-screen-mobile-1@1x.png");
+    background-image: url("../img/iphone-screen-mobile-1@1x.png");
     background-size: 142px 251px;
 
     @media @retina2x {
-      background-image: url("../../img/iphone-screen-mobile-1@2x.png");
+      background-image: url("../img/iphone-screen-mobile-1@2x.png");
     }
   
     @media @retina3x {
-      background-image: url("../../img/iphone-screen-mobile-1@3x.png");
+      background-image: url("../img/iphone-screen-mobile-1@3x.png");
     }
   }
   
@@ -124,15 +124,15 @@
     width: 142px;
     height: 251px;
     background-repeat: no-repeat;
-    background-image: url("../../img/iphone-screen-mobile-2@1x.png");
+    background-image: url("../img/iphone-screen-mobile-2@1x.png");
     background-size: 142px 251px;
   
     @media @retina2x {
-      background-image: url("../../img/iphone-screen-mobile-2@2x.png");
+      background-image: url("../img/iphone-screen-mobile-2@2x.png");
     }
   
     @media @retina3x {
-      background-image: url("../../img/iphone-screen-mobile-2@3x.png");
+      background-image: url("../img/iphone-screen-mobile-2@3x.png");
     }
   }
 
@@ -143,15 +143,15 @@
     width: 142px;
     height: 251px;
     background-repeat: no-repeat;
-    background-image: url("../../img/iphone-screen-mobile-3@1x.png");
+    background-image: url("../img/iphone-screen-mobile-3@1x.png");
     background-size: 142px 251px;
   
     @media @retina2x {
-      background-image: url("../../img/iphone-screen-mobile-3@2x.png");
+      background-image: url("../img/iphone-screen-mobile-3@2x.png");
     }
   
     @media @retina3x {
-      background-image: url("../../img/iphone-screen-mobile-3@3x.png");
+      background-image: url("../img/iphone-screen-mobile-3@3x.png");
     }
   }
 }
@@ -208,11 +208,11 @@
       width: 268px;
       height: 481px;
       background-size: 268px 481px;
-      background-image: url("../../img/iphone-screen-tablet-1@1x.png");
+      background-image: url("../img/iphone-screen-tablet-1@1x.png");
       margin: 0;
 
       @media @retina2x and @tablet-width {
-      background-image: url("../../img/iphone-screen-tablet-1@2x.png");
+      background-image: url("../img/iphone-screen-tablet-1@2x.png");
       }
     }
 
@@ -220,7 +220,7 @@
       width: 268px;
       height: 481px;
       background-size: 268px 481px;
-      background-image: url("../../img/iphone-screen-tablet-2@1x.png");
+      background-image: url("../img/iphone-screen-tablet-2@1x.png");
       margin: 0;
 
       @media @retina2x and @tablet-width {
@@ -323,11 +323,6 @@
       @media @retina2x {
         background-image: url("../img/iphone-screen-desktop-3@2x.png");
       }
-    }
-
-
-    &__slider-wrapper {
-      display: none; //временно
     }
     
     &__img {
