--- a/app/less/components/preview.less
+++ b/app/less/components/preview.less
@@ -244,6 +244,10 @@
 
 @media @desktop-width {
   .preview {
+
+    &__slider {
+      display: none !important;
+    }
     
     &__header {
       box-sizing: border-box;
