--- a/app/less/components/main-nav.less
+++ b/app/less/components/main-nav.less
@@ -19,7 +19,22 @@
       fill: #fff; 
     }
   }
+  
+  @keyframes MenuHide {
+    0% {
+      padding: 0px 0px;
+      opacity: 0;
+    }
 
+    100% {
+      padding: 15px 0px;
+      opacity: 1;
+    }
+  }
+
+  &--opened .main-nav__item a {
+    animation: MenuHide 0.3s ease-in-out forwards;
+  }
   
   &__logo-mobile {
     width: 75px;
@@ -47,6 +62,7 @@
 
 
   &__items {
+    z-index: 10;
     display: flex;
     flex-direction: column;
     list-style: none;
@@ -78,7 +94,6 @@
   
   &__item a[href] {
     &:hover {
-      // box-shadow: 0 2px 0 #fff;
       color: @pink-color;
     }
 
